# jarvis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.py
MCP/: mcp_config.json.example
api/: main.py
core/: factory.py  hitl_hooks.py  models.py  planner.py
core_agents/: agent_factory.py  planner.py
jarvis-backend/: README.md  main.py  pyproject.toml  test.py
jarvis-backend/config/: settings.py
jarvis-backend/jarvis_agents/: calendar.py  calendar_agent.py  orchestrator_agent.py  simple_calendar_agent.py  simple_gmail_agent.py
jarvis-backend/tools/: __init__.py  calendar_tools.py  gmail_tools.py
jarvis-electron/: .eslintrc.cjs  .gitignore  README.md  electron-builder.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts  vite.renderer.config.ts
jarvis-electron/src/main/: ipc.ts  main.ts  tray.ts  windows.ts
jarvis-electron/src/preload/: preload.ts
jarvis-electron/src/renderer/: index.html
jarvis-electron/src/renderer/src/: App.tsx  index.css
jarvis-electron/src/renderer/src/components/: ChatArea.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
jarvis-electron/src/renderer/src/hooks/: useWebSocket.ts
jarvis-electron/src/renderer/src/stores/: appStore.ts  chatStore.ts
jarvis-electron/src/renderer/src/types/: index.ts
mcp/: mcp_config.example.json  mcp_tools.json
scripts/: discover_tools.py
