[project]
name = "jarvis-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.25.0",
    "openai>=1.95.1",
    "openai-agents>=0.1.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["pyright>=1.1.403", "ruff>=0.12.3"]

[tool.ruff]
line-length = 88
indent-width = 4
# target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
